[package]
name = "catnip-provider"
description = "Fiberplane 'Catnip' Tutorial Provider"
authors = [ "Fiberplane <info@fiberplane.com>" ]
edition = "2021"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
fiberplane-pdk = { version = "1.0.0-alpha.3", path = "../providers/fiberplane-pdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4.1"
url = { version = "2.3.1", features = ["serde"] }

[build-dependencies]
vergen = { version = "7.5", default-features = false, features = [ "build", "git" ]}
