[package]
name = "catnip-provider"
description = "Fiberplane 'Catnip' Tutorial Provider"
authors = [ "Fiberplane <info@fiberplane.com>" ]
edition = "2021"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# The current PDK beta only works with this exact version of
# the fiberplane-models crate, this dependency is added to pin
# fiberplane-models version even if it's not directly imported in
# code.
fiberplane-models = { version = "=1.0.0-beta.1" }
fiberplane-pdk = { version = "=1.0.0-beta.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4.1"
url = { version = "2.3.1", features = ["serde"] }

[build-dependencies]
vergen = { version = "7.5", default-features = false, features = [ "build", "git" ]}
